v0.1.21 finished a todo, modified the query type of some entities to EAGER, added api  descriptions in swagger;